--- a/styles.css
+++ b/styles.css
@@ -239,7 +239,7 @@ img {
   border-radius: 0.5rem;
   transition: 0.3s;
 }
-.button:hover {
+.button_hire:hover {
   background-color: white;
   color: #3385ff;
   border: 2px solid #3385ff;
