--- a/styles.css
+++ b/styles.css
@@ -230,7 +230,7 @@ img {
 }
 
 /*BUTTONS*/
-.button {
+.button .button_hire .contact__button button  {
   display: inline-block;
   background-color: var(--first-color);
   color: #fff;
